fdo#75130: Export cell borders to xls and xlsx correctly.

Change-Id: Ic629fb4852d2ada9724dfee7618e2436c0fa28a8
(cherry picked from commit 1c1f42fdbad774cae7c45a7f8d60b9af766dee0a)
Reviewed-on: https://gerrit.libreoffice.org/8147
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Reviewed-on: https://gerrit.libreoffice.org/8152
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>